--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ tensorflow==2.15.0
 matplotlib==3.8.2
 keras==2.15.0
 scikit-learn==1.4.0
+transformers==4.37.2
+ffmpeg-python==0.2.0
+accelerate==0.27.2
+faster-whisper==0.10.0
