--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,84 @@
+absl-py==2.1.0
+asgiref==3.7.2
+astunparse==1.6.3
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+contourpy==1.2.0
+cycler==0.12.1
 decord==0.6.0
+Django==5.0.2
+falcon==2.0.0
+filelock==3.13.1
+flatbuffers==23.5.26
+fonttools==4.49.0
+fsspec==2024.2.0
+gast==0.5.4
+google-auth==2.28.1
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+grpcio==1.62.0
+h5py==3.10.0
+hug==2.6.1
+idna==3.6
+image==1.5.33
+Jinja2==3.1.3
+joblib==1.3.2
+keras==2.15.0
+kiwisolver==1.4.5
+libclang==16.0.6
+Markdown==3.5.2
+MarkupSafe==2.1.5
+matplotlib==3.8.2
+ml-dtypes==0.2.0
+mpmath==1.3.0
+networkx==3.2.1
 numpy==1.26.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
 opencv-contrib-python-headless==4.9.0.80
 opencv-python==4.9.0.80
+opt-einsum==3.3.0
+packaging==23.2
+Pillow==9.0.1
+protobuf==4.25.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+PyMuPDF==1.23.23
+PyMuPDFb==1.23.22
+pyparsing==3.1.1
+pytesseract==0.3.10
+python-dateutil==2.8.2
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.4.0
+scipy==1.12.0
+six==1.16.0
+sqlparse==0.4.4
+sympy==1.12
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.36.0
+termcolor==2.4.0
+threadpoolctl==3.3.0
 torch==2.2.0
 torchvision==0.17.0
-hug==2.6.1
-Pillow==9.0.1
-tensorflow==2.15.0
-matplotlib==3.8.2
-keras==2.15.0
-scikit-learn==1.4.0
-pymupdf==1.23.23
-Image==1.5.33
+triton==2.2.0
+typing_extensions==4.10.0
+urllib3==2.2.1
+Werkzeug==3.0.1
+wrapt==1.14.1
