--- a/requirements.txt
+++ b/requirements.txt
@@ -9,26 +9,5 @@ traits==6.3.2
 triton==2.2.0
 typing_extensions==4.9.0
 tzdata==2024.1
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==2.2.0
-userpath==1.8.0
-wadllib==1.3.6
-Werkzeug==3.0.1
-wrapt==1.14.1
-zipp==1.0.0
-tornado==6.1
-traits==6.3.2
-triton==2.2.0
-typing_extensions==4.9.0
-tzdata==2024.1
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==2.2.0
-userpath==1.8.0
-wadllib==1.3.6
-Werkzeug==3.0.1
-wrapt==1.14.1
-zipp==1.0.0
+ffmpeg-python
+faster-whisper
