--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 decord==0.6.0
-numpy==1.26.3
+numpy
 opencv-contrib-python-headless==4.9.0.80
 opencv-python==4.9.0.80
 torch==2.2.0
@@ -11,3 +11,6 @@ typing_extensions==4.9.0
 tzdata==2024.1
 ffmpeg-python
 faster-whisper
+fitz
+pymupdf
+pytesseract
