--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-decord==0.6.0
+decord
 numpy
-opencv-contrib-python-headless==4.9.0.80
-opencv-python==4.9.0.80
-torch==2.2.0
-torchvision==0.17.0
-tornado==6.1
-traits==6.3.2
-triton==2.2.0
-typing_extensions==4.9.0
-tzdata==2024.1
-ffmpeg-python
-faster-whisper
+opencv-python
+torch
 fitz
-pymupdf
 pytesseract
+hug
+falcon
+Pillow
+scikit-learn
+matplotlib
+keras
+tensorflow
